Save with text verif

--- a/css/main.css
+++ b/css/main.css
@@ -256,7 +256,9 @@ table {
 .start-block:nth-child(4)::after {
 	background: url(../images/number-4.svg) no-repeat
 }
-
+.start-block:nth-child(5)::after {
+	background: url(../images/number-4.svg) no-repeat
+}
 .start:nth-child(2) {
 	border-bottom: 1px solid #DADADA
 }
@@ -412,7 +414,7 @@ only screen and (max-device-width: 48em) {
 }
 
 .section-1-intro {
-	width: 342px;
+	width: 380px;
 	text-align: center
 }
 
@@ -439,7 +441,8 @@ only screen and (max-device-width: 48em) {
 	font-size: 15px;
 	margin-top: 10px;
 	line-height: 1.3em;
-	opacity: 0.78
+	opacity: 0.78;
+	width: 380px;
 	
 }
 .section-1-text a {
@@ -1105,7 +1108,7 @@ li p {
 	font-family: 'Work Sans', sans-serif;
 	font-size: 26px;
 	font-weight: 800;
-	padding-left: 118px;
+	padding-left: 130px;
 	position: absolute;
 	color: white;
 
@@ -1131,7 +1134,7 @@ li p {
 	content: attr(title);
 	position: absolute;
 	left: 0;
-	padding-left: 118px;
+	padding-left: 130px;
 	
 	
   }
