--- a/css/main.css
+++ b/css/main.css
@@ -246,7 +246,7 @@ table {
 }
 
 .start-block:nth-child(2)::after {
-	background: url(../images/number-1.svg) no-repeat
+	background: url(../images/number-2.svg) no-repeat
 }
 
 .start-block:nth-child(3)::after {
@@ -831,12 +831,14 @@ footer a {
 }
 
 footer p {
-	flex-grow: 1
+	flex-grow: 1;
+	min-width: 40vw;
 }
 
 .footer-content {
 	display: flex;
-	width: 700px;
+	width: 90vw;
+	max-width: 700px;
 	margin: 0 auto;
 	padding: 64px 16px
 }
@@ -865,18 +867,11 @@ footer p {
 		margin-top: 48px;
 		align-items: flex-start
 	}
+	.footer
 }
 
 
 
-@media (max-width: 768px) {
-	.fund-heading h1 {
-		text-align: center;
-		font-size: 56px;
-		font-weight: 800;
-		margin: 4px 0 16px 0
-	}
-}
 
 
 
