--- a/css/main.css
+++ b/css/main.css
@@ -259,6 +259,12 @@ table {
 .start-block:nth-child(5)::after {
 	background: url(../images/number-4.svg) no-repeat
 }
+.start-block:nth-child(6)::after {
+	background: url(../images/number-6.svg) no-repeat
+}
+.start-block:nth-child(7)::after {
+	background: url(../images/number-6.svg) no-repeat
+}
 .start:nth-child(2) {
 	border-bottom: 1px solid #DADADA
 }
